<resources>
    <string name="app_name">TaxiJob</string>
    <string name="main">На головну</string>
    <string name="about">Про додаток</string>
    <string name="author">Автор</string>
    <string name="confidantional">Захист даних</string>
    <string name="contract">Умови</string>
    <string name="begin">Почати</string>
    <string name="selected">Обрано</string>
    <string name="send_admin_mail">Надіслати адміністратору</string>
    <string name="first_name">Ім\'я</string>
    <string name="second_name">Прізвище</string>
    <string name="email">Email</string>
    <string name="phone_number">Телефон</string>


    <string name="compose_email">Compose Email</string>
</resources>