<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Місто"
                        android:textColor="@color/text" />
                    <Spinner
                        android:id="@+id/list_cities"
                        android:minWidth="278dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:background="@color/text"
                        android:gravity="clip_horizontal" />
                </TableRow>

                <TableRow>
                    <TextView
                      android:layout_marginTop="5dp"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:text="@string/first_name"
                      android:textColor="@color/text"/>
                    <EditText
                        android:layout_marginLeft="5dp"
                        android:layout_width="282dp"
                        android:backgroundTint="@color/colorAccent"
                        android:inputType="textPersonName"
                        android:text=""
                        android:textColor="@color/text"
                        android:id="@+id/first_name"/>
                </TableRow>

                <TableRow>
                  <TextView
                      android:layout_marginTop="5dp"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:text="@string/second_name"
                      android:textColor="@color/text"/>

                    <EditText
                        android:layout_marginLeft="5dp"
                        android:layout_width="282dp"
                        android:backgroundTint="@color/colorAccent"
                        android:inputType="textPersonName"
                        android:text=""
                        android:textColor="@color/text"
                        android:id="@+id/second_name"/>
                </TableRow>
                <TableRow>
                  <TextView
                      android:layout_marginTop="5dp"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:text="@string/email"
                      android:textColor="@color/text"/>

                    <EditText
                        android:layout_marginLeft="5dp"
                        android:layout_width="282dp"
                        android:backgroundTint="@color/colorAccent"
                        android:inputType="textEmailAddress"
                        android:text=""
                        android:textColor="@color/text"
                        android:id="@+id/email"/>
                </TableRow>
                <TableRow>
                  <TextView
                      android:layout_marginTop="5dp"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:text="@string/phone_number"
                      android:textColor="@color/text"/>

                    <EditText
                        android:layout_marginLeft="5dp"
                        android:layout_width="282dp"
                        android:backgroundTint="@color/colorAccent"
                        android:inputType="phone"
                        android:text=""
                        android:textColor="@color/text"
                        android:id="@+id/phone_number"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>


    </ScrollView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_admin_mail"
        android:id="@+id/sendEmail"
        android:layout_gravity="center"/>
</LinearLayout>